syntax = "proto3";

package Game;

message Vector {
float X = 1;
float Y = 2;
float Z = 3;
}

message Quaternion {
float X = 1;
float Y = 2;
float Z = 3;
float W = 4;
}

message PlayerInputUpdate {
  Vector cameraForwardDirection = 1;
  Vector targetDirection = 2;
  Vector movingDirection = 3;
  Vector forwardDirection = 4;
  Quaternion aimRotation = 5;
  bool movementInputOnFrame = 6;
  bool doInput = 7;
  bool takeInput = 8;
}