syntax = "proto3";
package state;

message Welcome {
  int32 localId = 1;
  int32 udp = 2;
}